# libwzcpp

./: .gitignore  CMakeLists.txt  README.md  check.py
cmake/: FindLZ4.cmake  FindSquish.cmake
include/: utils.h  wav.h  wzdirectory.h  wzerrors.h  wzfile.h  wzimage.h  wzkey.h  wzkeys.h  wznode.h  wzproperty.h  wzreader.h  wztypes.h
include/nx/: color.h  wz2nx_serializer.h
src/: CMakeLists.txt  utils.cc  wzkey.cc  wznode.cc  wzreader.cc
src/nx/: wz2nx_main.cc  wz2nx_serializer.cc
test/: CMakeLists.txt  test_reader.cc  test_wzkey.cc
